UtahLiveDataTest/src/objects/GrantsGovNamespaces__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>app__c</fullName>
        <label>app</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gran__c</fullName>
        <label>gran</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>header__c</fullName>
        <label>header</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soapAction__c</fullName>
        <label>soapAction</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>soapenv__c</fullName>
        <label>soapenv</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GrantsGovNamespaces</label>
</CustomObject>